# openclaw-edge-ai-platform

./: .gitignore  .rules  CHANGELOG.md  README.md  TODO.md  brain-server_0.8.5_arm64.deb  jetson-github-skill.md  openclaw-workspace-update.md  signal-gateway_0.8.5_arm64.deb
.github/: deny.toml
.github/workflows/: README.md  auto-deploy.yml  brain-server-ci.yml  code-quality.yml  dependencies.yml  deploy.yml  production-ready.yml  release-multi-arch.yml  release-with-debian.yml  release.yml  signal-gateway-ci.yml
.openclaw-workspace-backup/skills/prompt-guard/: SKILL.md
.openclaw-workspace-backup/skills/zeroclaw/: SKILL.md
docs/: BACKUP_STRATEGY.md  DISTRIBUTED_WORKFLOW.md  RELEASING.md  WORKFLOW.md
scripts/: build-deb-packages.sh  cron_ingest.sh  deploy-from-release.sh  generate-changelog.sh  run-tests.sh  signal-gateway-wrapper.sh  sync-jetson-to-github.sh
services/brain-server/: AGENTS.md  Cargo.toml  MULTI_AGENT_PLAN.md  README-v0.9.0.md  README.md  RELEASE_NOTES.md  v0.9.0-IMPLEMENTATION-ROADMAP.md  v0.9.0-VELOCITY-TECHNICAL-SPEC.md
services/brain-server/config/annotations/: business.toml  health.toml  health.toml.broken  philippines_expat.toml  technology.toml  travel_pets.toml
services/brain-server/src/: config.rs  main.rs
services/brain-server/src/annotator/: domains.rs  extractor.rs  mod.rs
services/openclaw-config/: README.md  auto-brain-ingest.service  brain-server.service  config.yaml  periodic-brain-ingest.service  periodic-brain-ingest.timer  signal-gateway.service
services/signal-gateway/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  README.md  TODO.md  config.yaml  link-qr.sh  link.sh  test-api.sh  test-websocket-client.js  test-websocket.sh
services/signal-gateway/.cargo/: config.toml
services/signal-gateway/src/: webhook.rs
services/signal-gateway/src/api/: mod.rs
services/signal-gateway/src/signal/: commands.rs  types.rs  worker.rs
services/signal-gateway/src/state/: mod.rs
workspace/: AGENTS.md  MEMORY.md
