[package]
name = "signal-gateway"
version = "0.1.0"
edition = "2021"
description = "Lightweight Signal daemon for OpenClaw in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main" }

tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "fs"], default-features = false }

axum = { version = "0.8.8", features = ["macros", "json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tokio-stream = "0.1.18"
async-stream = "0.3.6"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

anyhow = "1.0.102"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
base64 = "0.22"
url = "2.5"
clap = { version = "4.5.60", features = ["derive"] }
parking_lot = "0.12.5"

futures = "0.3.32"
futures-util = "0.3.32"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3


[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]
