[package]
name = "signal-gateway"
version = "0.1.1"
edition = "2021"
description = "Lightweight Signal daemon for OpenClaw in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main" }

# Override presage's libsignal-service to use latest libsignal v0.87.4
[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", rev = "f5ec60055bc5430e52f0f3e09cd670e1dbd9a79e" }

# Override libsignal-service's reqwest to use latest version
[patch.crates-io]
reqwest = "0.13.1"
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"


[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]
